--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,9 @@
   "plugins": ["react"],
   "rules": {
     "react/self-closing-comp": 0,
-    "react/jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0,
+    "arrow-body-style": 0,
+    "react/react-in-jsx-scope": 0,
+    "no-unused-vars": 0
   }
 }
