--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "react/jsx-filename-extension": 0,
     "arrow-body-style": 0,
     "react/react-in-jsx-scope": 0,
-    "no-unused-vars": 0
+    "no-unused-vars": 0,
+    "import/prefer-default-export": 0
   }
 }
