--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     "arrow-body-style": 0,
     "react/react-in-jsx-scope": 0,
     "no-unused-vars": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "react/jsx-props-no-spreading": 0,
+    "no-undef": 0
   }
 }
